# Sanctum

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: latency_baseline.csv  latency_optimized.csv  profiling_report.md
configs/: gestures.yaml  pipeline.yaml
configs/model/: classifier.yaml  trt_build.yaml
data/landmark_sequences/: mudra_hold_0000.npy  mudra_hold_0001.npy  mudra_hold_0002.npy  mudra_hold_0003.npy  mudra_hold_0004.npy  mudra_hold_0005.npy  mudra_hold_0006.npy  mudra_hold_0007.npy  mudra_hold_0008.npy  mudra_hold_0009.npy  mudra_hold_0010.npy  mudra_hold_0011.npy  mudra_hold_0012.npy  mudra_hold_0013.npy  mudra_hold_0014.npy  mudra_hold_0015.npy  mudra_hold_0016.npy  mudra_hold_0017.npy  mudra_hold_0018.npy  mudra_hold_0019.npy  mudra_hold_0020.npy  mudra_hold_0021.npy  mudra_hold_0022.npy  mudra_hold_0023.npy  mudra_hold_0024.npy  mudra_hold_0025.npy  mudra_hold_0026.npy  mudra_hold_0027.npy  mudra_hold_0028.npy  mudra_hold_0029.npy  mudra_hold_0030.npy  mudra_hold_0031.npy  mudra_hold_0032.npy  mudra_hold_0033.npy  mudra_hold_0034.npy  mudra_hold_0035.npy  mudra_hold_0036.npy  mudra_hold_0037.npy  mudra_hold_0038.npy  mudra_hold_0039.npy  (+160 more)
data/splits/: test_manifest.json  train_manifest.json  val_manifest.json
docker/: Dockerfile.dev  Dockerfile.inference  docker-compose.gpu.yml  docker-compose.yml
docs/: architecture.md  gesture_spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx
models/checkpoints/: gesture_classifier.onnx  gesture_classifier.pt
models/trt_engines/: gesture_classifier.engine
notebooks/: 01_landmark_eda.placeholder.md  02_gesture_model_dev.placeholder.md  03_latency_profiling.placeholder.md
scripts/: record_gesture_samples.py  run_demo.sh  setup_env.sh
src/: __init__.py
src/capture/: __init__.py  frame_ring_buffer.py  webcam_stream.py
src/gesture/: __init__.py  dataset.py  evaluate.py  export_onnx.py  inference_backend.py  model.py  train.py
src/landmarks/: __init__.py  mediapipe_hands.py  (+2 more)
tests/: test_gesture_classifier.py  test_landmarks.py  test_pipeline_e2e.py  test_trt_engine.py
(+27 files in other folders)
